--- a/workshop opener.css
+++ b/workshop opener.css
@@ -4,12 +4,13 @@
     width: 100%;
     border-top-left-radius: 8px;
     border-top-right-radius: 8px;
-    height: 200px;
+    height:200px;
 }
 
 .mh7technicalon {
     color: #1f2933;
     font-size: 34px;
+    font-weight: bold;
 }
 
 .mh8technicalon {
